--- a/public/exercise.html
+++ b/public/exercise.html
@@ -113,7 +113,7 @@
     <div id="toast">
       Workout Added Successfully!
     </div>
-    <script src="./api.js"></script>
-    <script src="./index.js"></script>
+    <script src="/api.js"></script>
+    <script src="/excercise.js"></script>
   </body>
 </html>
